--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">SearchApp</string>
+    <string name="no_data">No Data</string>
+    <string name="search">Search</string>
 </resources>
